--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "@testing-library/user-event": "^12.8.3",
     "agora-rtc-sdk": "^3.4.0",
     "agora-rtc-sdk-ng": "^4.3.0",
+    "agora-rtm-sdk": "^1.4.2",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.2.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
