--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "agora-rtc-sdk-ng": "^4.3.0",
     "agora-rtm-sdk": "^1.4.2",
     "classnames": "^2.3.1",
+    "eslint-config-prettier": "^8.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
