--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "node-sass-chokidar": "^1.5.0",
+    "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
