--- a/package.json
+++ b/package.json
@@ -3,89 +3,98 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.12.3",
-    "@material-ui/core": "^4.11.3",
+    "@babel/core": "7.14.3",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "agora-rtc-sdk": "^3.4.0",
-    "agora-rtc-sdk-ng": "^4.3.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "agora-rtc-sdk": "^3.5.2",
+    "agora-rtc-sdk-ng": "^4.4.0",
     "agora-rtm-sdk": "^1.4.2",
+    "apisauce": "^2.1.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.0",
-    "babel-loader": "8.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "8.2.2",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
-    "camelcase": "^6.1.0",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "camelcase": "^6.2.0",
+    "case-sensitive-paths-webpack-plugin": "2.4.0",
     "classnames": "^2.3.1",
-    "css-loader": "4.3.0",
-    "dotenv": "8.2.0",
+    "css-loader": "5.2.4",
+    "dotenv": "9.0.2",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.7.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^3.9.2",
-    "eslint-webpack-plugin": "^2.5.2",
-    "file-loader": "6.1.1",
-    "fs-extra": "^9.0.1",
-    "html-webpack-plugin": "4.5.0",
+    "eslint-plugin-testing-library": "^4.5.0",
+    "eslint-webpack-plugin": "^2.5.4",
+    "file-loader": "6.2.0",
+    "fs-extra": "^10.0.0",
+    "html-webpack-plugin": "5.3.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.6.0",
-    "jest-circus": "26.6.0",
-    "jest-resolve": "26.6.0",
-    "jest-watch-typeahead": "0.6.1",
-    "mini-css-extract-plugin": "0.11.3",
+    "jest": "26.6.3",
+    "jest-circus": "26.6.3",
+    "jest-resolve": "26.6.2",
+    "jest-watch-typeahead": "0.6.3",
+    "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "1.6.0",
     "moment": "^2.29.1",
-    "node-sass": "^5.0.0",
     "node-sass-chokidar": "^1.5.0",
+    "npm-check-updates": "^11.5.13",
     "npm-run-all": "^4.1.5",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "optimize-css-assets-webpack-plugin": "6.0.0",
     "pnp-webpack-plugin": "1.6.4",
-    "postcss-flexbugs-fixes": "4.2.1",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "5.3.0",
+    "postcss-normalize": "10.0.0",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
-    "prompts": "2.4.0",
+    "prompts": "2.4.1",
+    "qs": "^6.10.1",
+    "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.3",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0",
     "react-lazyload": "^3.2.0",
     "react-loadable": "^5.5.0",
-    "react-redux": "^7.2.3",
-    "react-refresh": "^0.8.3",
+    "react-redux": "^7.2.4",
+    "react-refresh": "^0.10.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-virtuoso": "^1.8.6",
-    "resolve": "1.18.1",
-    "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^10.0.5",
-    "semver": "7.3.2",
-    "style-loader": "1.3.0",
-    "terser-webpack-plugin": "4.2.3",
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "reduxsauce": "^1.2.0",
+    "resolve": "1.20.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^11.1.1",
+    "seamless-immutable": "^7.1.4",
+    "semver": "7.3.5",
+    "style-loader": "2.0.0",
+    "terser-webpack-plugin": "^4.2.3",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
-    "web-vitals": "^1.1.1",
-    "webpack": "4.44.2",
-    "webpack-dev-server": "3.11.1",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "web-vitals": "^1.1.2",
+    "webpack": "5.37.1",
+    "webpack-dev-server": "3.11.2",
+    "webpack-manifest-plugin": "3.1.1",
+    "workbox-webpack-plugin": "6.1.5"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -170,5 +179,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "react-hot-loader": "^4.13.0",
+    "sass": "^1.32.13"
   }
 }
