--- a/package.json
+++ b/package.json
@@ -1,187 +1,164 @@
 {
   "name": "sparkstudio",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@babel/core": "7.14.3",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@svgr/webpack": "5.5.0",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
-    "agora-rtc-sdk": "^3.5.2",
-    "agora-rtc-sdk-ng": "^4.4.0",
-    "agora-rtm-sdk": "^1.4.2",
-    "apisauce": "^2.1.1",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "babel-loader": "8.2.2",
-    "babel-plugin-named-asset-import": "^0.3.7",
-    "babel-preset-react-app": "^10.0.0",
-    "bfj": "^7.0.2",
-    "camelcase": "^6.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.4.0",
-    "classnames": "^2.3.1",
-    "css-loader": "5.2.4",
-    "dotenv": "9.0.2",
-    "dotenv-expand": "5.1.0",
-    "eslint": "^7.26.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.7.2",
-    "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^4.5.0",
-    "eslint-webpack-plugin": "^2.5.4",
-    "file-loader": "6.2.0",
-    "fs-extra": "^10.0.0",
-    "html-webpack-plugin": "5.3.1",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "26.6.3",
-    "jest-circus": "26.6.3",
-    "jest-resolve": "26.6.2",
-    "jest-watch-typeahead": "0.6.3",
-    "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "1.6.0",
-    "moment": "^2.29.1",
-    "node-sass-chokidar": "^1.5.0",
-    "npm-check-updates": "^11.5.13",
-    "npm-run-all": "^4.1.5",
-    "optimize-css-assets-webpack-plugin": "6.0.0",
-    "pnp-webpack-plugin": "1.6.4",
-    "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "5.3.0",
-    "postcss-normalize": "10.0.0",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "5.0.2",
-    "prompts": "2.4.1",
-    "qs": "^6.10.1",
-    "ramda": "^0.27.1",
-    "react": "^17.0.2",
-    "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.4",
-    "react-dom": "^17.0.2",
-    "react-lazyload": "^3.2.0",
-    "react-loadable": "^5.5.0",
-    "react-redux": "^7.2.4",
-    "react-refresh": "^0.10.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-router-redux": "^4.0.8",
-    "react-virtuoso": "^1.8.6",
-    "redux": "^4.1.0",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3",
-    "reduxsauce": "^1.2.0",
-    "resolve": "1.20.0",
-    "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^11.1.1",
-    "seamless-immutable": "^7.1.4",
-    "semver": "7.3.5",
-    "style-loader": "2.0.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "ts-pnp": "1.2.0",
-    "url-loader": "4.1.1",
-    "web-vitals": "^1.1.2",
-    "webpack": "5.37.1",
-    "webpack-dev-server": "3.11.2",
-    "webpack-manifest-plugin": "3.1.1",
-    "workbox-webpack-plugin": "6.1.5"
-  },
+  "homepage": ".",
   "scripts": {
+    "lint": "node_modules/.bin/eslint .",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,scss}\"",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "node scripts/start.js",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "node scripts/build.js",
     "build": "npm-run-all build-css build-js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js --env=jsdom"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.41",
+    "@material-ui/pickers": "^3.1.0",
+    "actioncable": "^5.2.0",
+    "agora-rtc-sdk-ng": "^4.4.0",
+    "agora-rtm-sdk": "^1.4.2",
+    "apisauce": "^1.0.2",
+    "autoprefixer": "7.1.6",
+    "babel-core": "6.26.0",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-react-app": "^3.1.0",
+    "babel-runtime": "6.26.0",
+    "balanced-match": "^1.0.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
+    "classnames": "^2.2.6",
+    "css-loader": "0.28.7",
+    "date-fns": "^2.0.0-alpha.31",
+    "dotenv": "4.0.0",
+    "downshift": "^1.31.6",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^2.0.1",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-flowtype": "2.39.1",
+    "extract-text-webpack-plugin": "3.0.2",
+    "fecha": "^2.3.3",
+    "file-loader": "1.1.5",
+    "fs-extra": "3.0.1",
+    "git-gui": "0.0.7",
+    "history": "^5.0.0",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "^24.8.0",
+    "load-script": "^1.0.0",
+    "lodash": "^4.17.15",
+    "material-ui-pickers": "^2.2.4",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
+    "node-sass-chokidar": "^1.3.5",
+    "normalizr": "^3.2.4",
+    "npm": "^6.10.3",
+    "npm-run-all": "^4.1.5",
+    "object-assign": "4.1.1",
+    "opentok-react": "^0.9.0",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "promise": "8.0.1",
+    "qs": "^6.10.1",
+    "raf": "3.4.0",
+    "rambda": "^1.1.0",
+    "ramda": "^0.24.1",
+    "react": "^16.9.0",
+    "react-color": "^2.14.1",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-data-table-component": "^6.11.0",
+    "react-dev-utils": "^5.0.3",
+    "react-dom": "^16.9.0",
+    "react-dropzone": "^11.2.4",
+    "react-hot-loader": "^4.13.0",
+    "react-html5-camera-photo": "^1.4.3",
+    "react-loadable": "^5.3.1",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-sketch": "^0.5.1",
+    "react-sortable-tree": "^2.1.0",
+    "react-text-mask": "^5.3.0",
+    "react-virtuoso": "^1.8.6",
+    "recompose": "^0.30.0",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^4.0.0",
+    "redux-saga": "^0.16.0",
+    "reduxsauce": "^0.7.0",
+    "sass-loader": "^7.1.0",
+    "seamless-immutable": "^7.1.3",
+    "style-loader": "0.19.0",
+    "styled-components": "^5.1.1",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.6.2",
+    "uuid": "^3.2.1",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
+    "whatwg-fetch": "2.0.3"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^4.3.8",
+    "loader-utils": "^1.2.3",
+    "npm-run-all": "^4.1.5",
+    "preload-webpack-plugin": "^3.0.0-beta.3",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
   },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testRunner": "/Users/kalyanikongari/Documents/demo/web-poc/node_modules/jest-circus/runner.js",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged --pattern \"**/*.{js,jsx,json,md,scss}\""
+    }
   },
   "babel": {
     "presets": [
       "react-app"
     ]
   },
-  "devDependencies": {
-    "react-hot-loader": "^4.13.0",
-    "sass": "^1.32.13"
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,mjs}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node",
+      "mjs"
+    ]
   }
 }
